--- a/selectors.css
+++ b/selectors.css
@@ -20,6 +20,7 @@ a:visited[href$=".com"] {
     list-style-type: none;
 }
 
+
 ol:last-child {
     font-weight: bold;
 }
@@ -27,4 +28,16 @@ ol:last-child {
 a:hover[href^="mailto"] {
     color: red;
 }
-
+a:hover[href$=".com"] {
+    color: orange;
+}
+#languages li {
+    font-style: italic;
+}
+body {
+    text-align: center;
+    list-style-position: inside;
+}
+div p:nth-child(2) {
+    background-color: rgba(0,0,0,.5);
+}
