--- a/index.css
+++ b/index.css
@@ -18,6 +18,10 @@ a[href$='.com']:visited {
 ol li:last-child {
     font-weight: bold;
 }
+a:hover {
+    cursor: pointer;
+    background: orange;
+}
 a[href$='.org']:hover {
     cursor: pointer;
     background: red;
