--- a/index.css
+++ b/index.css
@@ -29,3 +29,10 @@ a[href$='.org']:hover {
 #fontchange li {
     font-style: italic;
 }
+#centertext {
+    text-align: center;
+    list-style-position: inside;
+}
+.class1 p {
+    background-color: rgba(0,0,0,.5);
+}
