--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ a:hover[href$=".com"] {
 .language li {
     font-style: italic;
 }
+
+body {
+    text-align: center;
+}
+
+.para p {
+    background-color: rgba(0,0,0,.5);
+}
