--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,12 @@ ul {
     list-style-type: none;
 }
 
-ol {
+/* ol {
     font-weight: bold;
-}
+} */
+/* ol:nth-child(4) {
+    font-weight: bold;
+} */
 
 li {
     text-align: center;
@@ -49,4 +52,44 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a[href$=".com"]:visited {
+    color: green;
+}
+
+.links-list {
+    list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png) disc;
+}
+
+ol li:last-child {
+    font-weight: 700;
+}
+
+a[href$=".com"]:hover {
+    color: red
+}
+a:hover {
+    color: orange
+}
+
+body {
+    text-align: center;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,0.5);
 }
