--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,27 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    font-weight: bold;
+    text-decoration-line: underline;
+}
+#skills-header {
+    color: RebeccaPurple;
+}
+
+.links-list {
+    list-style: outside url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png") disc
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+
+ul#language-list {
+    font-style: italic;
+}
+p:nth-child(3) {
+    background-color: rgba(0, 0, 0, 0.5);
 }
