--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,33 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+.important {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+#skills-header{
+    color: rebeccapurple
+}
+
+.links-list {
+    list-style: outside url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png") disc;
+}
+
+ol li:first-child {
+    font-weight: normal
+}
+
+ul#language-list {
+    font-style: italic
+}
+
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,0.5)
+}
+
+body {
+    text-align: center;
+}
