--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ ol {
 li {
     text-align: center;
     border: 1px solid red;
-    border-radius: 10px;
+ border-radius: 10px;
     color: blue;
     background-color: lightpink;
     padding-left: 30px;
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -50,3 +51,18 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+.important {
+    font-weight: bold;
+    text-decoration: underline;
+}
+#skills-header{
+    color:rebeccapurple;
+}
+
+
+.links-list{
+    list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png)
+}
+
+ol li:
