--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,37 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+.important{
+    font-weight: 700;
+    text-decoration: underline solid rgb(0, 0, 255);
+}
+ #skills-header {
+     color: rebeccapurple;
+ }
+ a[href$=".com"]:visited {
+    color: green;
+}
+ a[href$=".com"]:hover {
+    color: red;
+ }
+ a:hover {
+     color: orange
+ }
+ul#language-list {
+    font-style: italic;
+}
+ 
+ .links-list {
+     list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
+ }
+ ol li:first-child {
+     font-weight: normal;
+ }
+
+ body {
+     text-align: center;
+ }
+ p:nth-child(3) {
+     background-color: rgb(0, 0, 0, 0.5);
+ }
