--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -47,6 +48,48 @@ p {
     padding-bottom: 20px;
 }
 
-h2, h3 {
+ h2, h3 {
     font-size: 20px;
+
+}
+
+.important{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+#skills-header{
+    color: rebeccapurple;
+}
+
+
+a[href$=".com"]:visited{
+    color: green;
+}
+
+
+.links-list{
+    list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
+}
+
+ol li:first-child{
+    font-weight: normal;
+}
+
+
+a[href$=".com"]:hover{
+    color: red;
+}
+
+
+a:hover{
+    color: orange;
+}
+
+p:nth-child(3){
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#language-list{
+    font-style: italic;
 }
