--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ ul {
     list-style-type: none;
 }
 
-ol {
-    font-weight: bold;
+ol li:last-child {
+    font-weight: 700;
 }
 
 li {
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,29 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    font-weight: 700;
+    text-decoration: underline;
+}
+
+h2#skills-header {
+    color: rgb(102, 51, 153);
+}
+
+.links-list {
+    list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png");
+}
+
+ul#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color:rgba(0, 0, 0, 0.5)
+}
+
+a[href$=".com"]:hover ​{
+    color:​ ​red;
 }
