--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,45 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a[href$=".com"]:visited {
+    color: green;
+}
+
+.links-list {
+    list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png");
+}
+
+ol li:first-child {
+    font-weight:normal;
+}
+
+ol li:last-child {
+    font-weight: bold;
+}
+
+a[href$=".com"]:hover {
+    color: red;
+}
+
+a:hover {
+    color: orange;
+}
+
+ul#language-list {
+    font-style:italic;
+}
+
+div>p+p {
+    background-color: rgba(0,0,0,.5);
 }
