--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,7 @@ ul {
     list-style-type: none;
 }
 
-ol {
-    font-weight: bold;
-}
+
 
 li {
     text-align: center;
@@ -67,15 +65,21 @@ color:red;
 a[href]:hover{
     color:orange;
 }
-#languages-list{
+ul#language-list{
     font-style: italic;
 }
-#background{
-    background-color:rgba(0,0,0,.5) ;
-}
+
 .links-list{
     list-style:url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
 }
+
 ol li:first-child {
-    font-weight: normal;
+    font-weight:normal;
+}
+
+ol li:last-child{
+    font-weight: 700;
+}
+p:nth-child(3){
+    background-color:rgba(0,0,0,.5);
 }
