--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,25 @@ h1 {
     font-family: 'Luminari';
     color: blue;
     font-size: 30px;
+    text-decoration: underline blue;
+} 
+.important{
+    text-decoration: underline;  
+}
+a:visited{
+    color:green;
+}
+a:hover {
+    transform: red;
+}
+a[href$=".org"]:hover{
+    color: orange;
+}
+.a:hover{
+    opacity: 3;
+}
+ul.links-list{
+    list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
 }
 
 ul {
@@ -9,6 +28,9 @@ ul {
 }
 
 ol {
+    font-weight: normal;
+}
+li.four-child{
     font-weight: bold;
 }
 
@@ -30,6 +52,7 @@ img {
 }
 
 body {
+    text-align: center;
     font-family: sans-serif;
 }
 
@@ -42,6 +65,10 @@ html {
     background: radial-gradient(circle, rgba(159,193,201,1) 9%, rgba(224,209,221,1) 52%, rgba(0,212,255,1) 100%);
 }
 
+ul#language-list{
+    font-style: italic;
+}
+
 p {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -49,4 +76,10 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+h2#skills-header{
+    color: rebeccapurple;
+}
+div p:nth-child(3){
+    background-color:rgba(0,0,0,.5);
 }
