--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -50,3 +51,37 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+.important {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+#skills-header {
+    color: rebeccaPurple;
+}
+
+a:visited[href$=".com"] {
+    color: green;
+}
+
+.links-list {
+    list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+
+ol li:last-child {
+    font-weight: bold;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+div p:nth-child(3){
+    background-color:rgba(0,0,0,.5);
+}
+
