finished css selectors lab

--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,42 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+#skills-header{
+    color: RebeccaPurple;
+}
+a[href$=".com"]:visited {
+    color: green
+}
+.important{
+    text-decoration: underline;
+    font-weight: bold;
+}
+.links-list {
+    list-style: url(' https://github.githubassets.com/images/icons/emoji/unicode/1f310.png ') ;
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+
+
+a[href$=".com"]:hover{
+    color: red;
+}
+
+a:hover{
+    color: orange;
+}
+
+body{
+    text-align: center;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,.5);
+}
