--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,16 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+.important{
+    text-decoration: underline solid blue;
+    font-weight:  700px;
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a.com:visited{
+    color:green;
+}
