--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {
-    font-family: 'Luminari';
-    color: blue;
-    font-size: 30px;
+    font-family: 'Luminari' !important;
+    color: blue !important;
+    font-size: 30px !important;
 }
 
 ul {
@@ -31,10 +31,11 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
-    text-decoration-line: underline;
+    text-decoration-line: underline !important;
 }
 
 html {
@@ -48,5 +49,42 @@ p {
 }
 
 h2, h3 {
-    font-size: 20px;
+    font-size: 20px !important;
+}
+
+.important{
+    font-weight: bold;
+    text-decoration: underline solid rgb(0, 0, 255);
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a[href$=".com"]:visited {
+    color: green;
+}
+
+.links-list {
+    list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png");
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+
+a[href$=".com"]:hover {
+    color: red;
+}
+
+a[href$=".org"]:hover {
+    color: orange;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0, 0, 0.5);
 }
