--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ ul {
     list-style-type: none;
 }
 
-ol {
+ol li:last-child {
     font-weight: bold;
 }
 
@@ -50,3 +50,45 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+
+h1.important {
+    font-weight: 700;
+    text-decoration: underline solid rgb(0,0,255);
+}
+
+#skills-header {
+    color: rgb(102,51,153)
+}
+
+a:visited[href$=".com"] {
+    color: green
+}
+
+.links-list {
+    list-style: outside url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png) disc;
+}
+
+a:hover[href$=".com"] {
+    color: red;
+}
+
+a:hover:not([href$=".com"]) {
+    color: orange;
+}
+
+body {
+    text-align: center;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,0.5);
+}
+
+
+
+
+
