--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@ h1 {
     font-size: 30px;
 }
 
-ul {
+ul{
     list-style-type: none;
 }
 
-ol {
+/* ol {
     font-weight: bold;
-}
+} */
 
 li {
     text-align: center;
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align:center;
 }
 
 h3 {
@@ -49,4 +50,39 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    text-decoration: underline;
+    font-weight: bold;
+}
+#skills-header {
+    color:rebeccapurple;
+}
+
+
+
+  a[href$=".com"]:visited {
+      color:green;
+  }
+
+  ul.links-list { list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png"); }
+
+ol li:last-child{
+    font-weight: bold;
+}
+
+a[href]:hover {
+    color:orange;
+}
+
+a[href$=".com"]:hover{
+   color:red;
+}
+
+#language-list {
+    font-style:italic;
+}
+div p:nth-child(3) {
+   background-color: rgb(0,0,0,.5);
 }
