--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,38 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important{
+    text-decoration-line: underline;
+    font-weight: bold;
+
+}
+
+#skills-header{
+    color: rebeccapurple;
+}
+
+a[href$=".com"]​:visited{
+    color:green;
+}
+
+.links-list{
+    list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png");
+}
+
+ol li:first-child{
+    font-weight: normal;
+}
+
+a[href$=".com"]​:hover{
+    color:red;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3){
+   background-color: rgba(0, 0, 0, 0.5);
 }
