--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,19 @@ h1 {
     color: blue;
     font-size: 30px;
 }
+ .important {
+    font-weight: 700;
+    text-decoration: underline;
+}
 
+#skills-header {
+    color:rebeccapurple
+}
 ul {
     list-style-type: none;
 }
 
-ol {
+ol li:last-child{
     font-weight: bold;
 }
 
@@ -31,6 +38,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +57,27 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+
+a:visited[href$=".com"] {
+    color:green
+}
+a:hover[href$=".com"] {
+    color:red
+}
+a:hover:not[href$=".com"] {
+    color:orange
+}
+
+.links-list {
+    list-style: outside url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png) disc;
+}
+
+#language-list {
+    font-style:italic
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,.5);
 }
