--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+.important {
+    text-decoration: underline;
+    font-weight: 700;
+}
+#skills-header {
+    color: rebeccapurple;
+}
+   
+a:visited{
+    color: green;
+}
+a:hover{
+    color: red
+}
+a:nth-child(4):hover{
+    color: orange;
+}
+.links-list{
+    list-style: disc outside url('https://github.githubassets.com/images/icons/emoji/unicode/1f310.png');
+}
+
 h1 {
     font-family: 'Luminari';
     color: blue;
@@ -8,8 +29,16 @@ ul {
     list-style-type: none;
 }
 
-ol {
-    font-weight: bold;
+ol li:last-child {
+  font-weight: 700;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p+p {
+    background-color: rgba(0,0,0,.5); 
 }
 
 li {
@@ -31,6 +60,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
