--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,87 @@
 h1 {
-    font-family: 'Luminari';
-    color: blue;
-    font-size: 30px;
+  font-family: "Luminari";
+  color: blue;
+  font-size: 30px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
-ol {
-    font-weight: bold;
-}
+/* ol {
+  font-weight: bold;
+} */
 
 li {
-    text-align: center;
-    border: 1px solid red;
-    border-radius: 10px;
-    color: blue;
-    background-color: lightpink;
-    padding-left: 30px;
+  text-align: center;
+  border: 1px solid red;
+  border-radius: 10px;
+  color: blue;
+  background-color: lightpink;
+  padding-left: 30px;
 }
 
 img {
-    width: auto;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: auto;
+  height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
-    font-family: sans-serif;
+  font-family: sans-serif;
+  text-align:center;
 }
 
 h3 {
-    text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 html {
-    background-color: rgb(159,193,201);
-    background: radial-gradient(circle, rgba(159,193,201,1) 9%, rgba(224,209,221,1) 52%, rgba(0,212,255,1) 100%);
+  background-color: rgb(159, 193, 201);
+  background: radial-gradient(
+    circle,
+    rgba(159, 193, 201, 1) 9%,
+    rgba(224, 209, 221, 1) 52%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 p {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-h2, h3 {
-    font-size: 20px;
+h2,
+h3 {
+  font-size: 20px;
+}
+.important {
+  text-decoration: underline;
+  font-weight: bold;
+}
+#skills-header {
+  color: RebeccaPurple;
+}
+a[href$=".com"]:visited {
+  color: green;
+}
+.links-list {
+  list-style: url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
+}
+ol li:last-child{
+    font-weight: bold;
+}
+a[href^="https"]:hover{
+    color:orange;
+}
+a[href$=".com"]:hover{
+    color: red;
+}
+#language-list{
+    font-style: italic;
+}
+div p:nth-of-type(2) {
+    background-color: rgba(0,0,0,.5);
 }
