--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,93 @@
 h1 {
-    font-family: 'Luminari';
-    color: blue;
-    font-size: 30px;
+  font-family: "Luminari";
+  color: blue;
+  font-size: 30px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 ol {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 li {
-    text-align: center;
-    border: 1px solid red;
-    border-radius: 10px;
-    color: blue;
-    background-color: lightpink;
-    padding-left: 30px;
+  text-align: center;
+  border: 1px solid red;
+  border-radius: 10px;
+  color: blue;
+  background-color: lightpink;
+  padding-left: 30px;
 }
 
 img {
-    width: auto;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: auto;
+  height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 h3 {
-    text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 html {
-    background-color: rgb(159,193,201);
-    background: radial-gradient(circle, rgba(159,193,201,1) 9%, rgba(224,209,221,1) 52%, rgba(0,212,255,1) 100%);
+  background-color: rgb(159, 193, 201);
+  background: radial-gradient(
+    circle,
+    rgba(159, 193, 201, 1) 9%,
+    rgba(224, 209, 221, 1) 52%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 p {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-h2, h3 {
-    font-size: 20px;
+h2,
+h3 {
+  font-size: 20px;
+}
+
+.important {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+#skills-header {
+  color: rgb(102, 51, 153);
+}
+
+a:visited {
+  color: rgb(0, 128, 0);
+}
+
+.links-list {
+  list-style: outside
+    url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png")
+    disc;
+}
+
+ol li:first-child {
+  font-weight: normal;
+}
+
+p:nth-child(3) {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+body {
+  text-align: center;
+}
+
+#language-list {
+  font-style: italic;
 }
