--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ ul {
     list-style-type: none;
 }
 
-ol {
+/* ol {
     font-weight: bold;
-}
+} */
 
 li {
     text-align: center;
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,44 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    font-weight: 700;
+    text-decoration: underline solid blue;
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a.one:visited {
+    color: green;
+}
+a.one:hover {
+    color: red;
+}
+
+a.two:visited {
+    color: green;
+}
+
+a.three:visited {
+    color: green;
+}
+
+.links-list {
+    list-style: outside url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png") disc;
+}
+
+ol li:last-child {
+    font-weight: 700;
+}
+
+ul#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0, 0.05);
 }
