lab is not passing no matter what I do

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+.important {
+    /* font-weight: 700; */
+    text-emphasis: bold;
+    text-decoration: underline;
+}
+
+#skills-header {
+    color: RebeccaPurple;
+}
+
+a[href$=".com"]:visited {
+color: green;
+}
+
+a[href$=".com"]:hover {
+color: red;
+}
+
+a:not(".com "):hover {
+    color: orange;
+}
+
+a:not(".com "):visited {
+    color: orange;
+}
+
 h1 {
     font-family: 'Luminari';
     color: blue;
@@ -21,6 +47,18 @@ li {
     padding-left: 30px;
 }
 
+ol li:last-child {
+    font-weight: bold;
+}
+
+li.links-list {
+  list-style: url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png");
+}
+
+ul#language-list {
+    font-style: italic;
+}
+
 img {
     width: auto;
     height: 200px;
@@ -31,6 +69,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -45,6 +84,10 @@ html {
 p {
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0,0,0,.5);
 }
 
 h2, h3 {
