--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -50,3 +51,33 @@ p {
 h2, h3 {
     font-size: 20px;
 }
+ .important {
+     font-weight: bold;
+     text-decoration: underline;
+ }
+
+ #skills-header {
+     color: rebeccapurple;
+ }
+
+ .links-list {
+    list-style:outside;
+    list-style-image:url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png) ;
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+/* a[href$=".com"]:hover {
+    color: red;
+} */
+
+a[href$=".com"]:visited {
+    color: green;
+}
+ ul#language-list.links-list {
+     font-style: italic;
+ }
+  p:nth-child(3) {
+      background-color: rgba(0, 0,0, 0.5);
+  }
