--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ ul {
     list-style-type: none;
 }
 
-ol {
+ol>li:last-child {
     font-weight: bold;
 }
 
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -38,8 +39,8 @@ h3 {
 }
 
 html {
-    background-color: rgb(159,193,201);
-    background: radial-gradient(circle, rgba(159,193,201,1) 9%, rgba(224,209,221,1) 52%, rgba(0,212,255,1) 100%);
+    background-color: rgb(159, 193, 201);
+    background: radial-gradient(circle, rgba(159, 193, 201, 1) 9%, rgba(224, 209, 221, 1) 52%, rgba(0, 212, 255, 1) 100%);
 }
 
 p {
@@ -47,6 +48,44 @@ p {
     padding-bottom: 20px;
 }
 
-h2, h3 {
+h2,
+h3 {
     font-size: 20px;
+}
+
+.important {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+ul.links-list {
+    list-style: outside url(https://github.githubassets.com/images/icons/emoji/unicode/1f310.png);
+}
+
+a[href]:visited {
+    color: green;
+}
+
+a[href]:hover {
+    color: orange;
+}
+
+a[href$=".com"]:visited {
+    color: green;
+}
+
+a[href$=".com"]:hover {
+    color: red;
+}
+
+#language-list {
+    font-style: italic;
+}
+
+p:nth-child(3) {
+    background-color: rgba(0, 0, 0, .5);
 }
