--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ ul {
     list-style-type: none;
 }
 
-ol {
-    font-weight: bold;
-}
+/* ol { */
+    /* font-weight: bold;
+} */
 
 li {
     text-align: center;
@@ -31,6 +31,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -49,4 +50,32 @@ p {
 
 h2, h3 {
     font-size: 20px;
+}
+
+h1, h2, h3, h4, h5, h6{
+    
+    text-decoration: underline !important;
+    font-weight: bold !important;
+}
+#skills-header{
+    color: rebeccapurple;
+}
+#language-list{
+    font-style: italic ;
+}
+.links-list{
+    list-style: outside url("https://github.githubassets.com/images/icons/emoji/unicode/1f310.png")  ;
+}
+ol li:last-child{
+font-weight: bold;
+}
+
+p:nth-child(3){
+background-color: rgba(0,0,0,.5);
+}
+a:hover{
+    color:red;
+}
+a:visited{
+    color: green;
 }
