--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,24 @@ h1 {
     color: blue;
     font-size: 30px;
 }
-
+ 
 ul {
     list-style-type: none;
 }
 
+ul#language-list {
+    font-style: italic;
+}
+
 ol {
+    font-weight: bold;
+}
+
+ol li:first-child {
+    font-weight: normal;
+}
+
+ol:last-child {
     font-weight: bold;
 }
 
@@ -31,6 +43,7 @@ img {
 
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 h3 {
@@ -47,6 +60,35 @@ p {
     padding-bottom: 20px;
 }
 
+p:nth-child(3) {
+    background-color: rgba(0,0,0,.5);
+}
+
 h2, h3 {
     font-size: 20px;
+}
+
+.important {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.links-list {
+    list-style: outside url('https://github.githubassets.com/images/icons/emoji/unicode/1f310.png');
+}
+
+#skills-header {
+    color: rebeccapurple;
+}
+
+a[href$=".com"]:visited {
+    color: green;
+}
+
+a[href$=".com"]:hover {
+    color: red;
+}
+
+a:hover {
+    color: orange;
 }
